<resources>
    <string name="app_name" translatable="false">SpaceX</string>
    <string name="please_wait">Please wait...</string>
    <string name="no_connection">No connection!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_made_by_k33zo">App made by k33zo</string>
    <string name="items">Items</string>
    <string name="about">About</string>
    <string name="launches">Launches</string>
    <string name="exit">Exit</string>
    <string name="do_you_really_want_to_close_the_application">Do you really want to close the application?</string>
    <string name="cancel">Cancel</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="details">Details</string>
    <string name="title">Title</string>
    <string name="missions">Missions</string>
    <string name="wikipedia" translatable="false">Wikipedia</string>
    <string name="website">Website</string>
    <string name="description">Description</string>
    <string name="rockets">Rockets</string>
    <string name="type">Type</string>
    <string name="active">Active:</string>
    <string name="country">Country</string>
    <string name="company">Company</string>
    <string name="share_mission">Share mission</string>
    <string name="share_launch_item">Share Launch Item</string>
    <string name="launch_pads">Launch Pads</string>
    <string name="status" translatable="false">Status</string>
    <string name="location">Location</string>
    <string name="region">Region</string>
    <string name="settings">Settings</string>
    <string name="pads">Pads</string>
    <string name="choose_language">Choose language:</string>
    <string name="english" translatable="false">English</string>
    <string name="hrvatski" translatable="false">Hrvatski</string>
    <string name="success">Success:</string>
    <string name="map">Map</string>
    <string name="email" translatable="false">Email\n</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="logout">Logout</string>
    <string name="upload_profile_image">Upload profile image</string>
    <string name="select_picture">Select picture</string>
    <string name="upload_picture">Upload picture</string>
    <string-array name="languages">
        <item>English</item>
        <item>Croatian</item>
        <!-- Add more languages as needed -->
    </string-array>
</resources>