<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menuLaunches"
        android:title="@string/launches"
        android:icon="@drawable/launch"/>

    <item
        android:id="@+id/menuMissions"
        android:title="@string/missions"
        android:icon="@drawable/mission"/>

    <item
        android:id="@+id/menuRockets"
        android:title="@string/rockets"
        android:icon="@drawable/rocket"/>

    <item
        android:id="@+id/menuLaunchPads"
        android:title="@string/pads"
        android:icon="@drawable/launch_pad"/>

    <item
        android:id="@+id/menuSettings"
        android:title="@string/settings"
        android:icon="@drawable/settings"/>

    <item
        android:id="@+id/menuAbout"
        android:title="@string/about"
        android:icon="@drawable/about"/>

    <item
        android:id="@+id/menuLogout"
        android:title="@string/logout"
        android:icon="@drawable/logout"/>
</menu>