<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_10dp">



        <TextView
            android:text="@string/name"
            style="@style/PagerTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/tvName"
            tools:text="@tools:sample/lorem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/status"
            style="@style/PagerTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/tvStatus"
            tools:text="@tools:sample/lorem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/wikipedia"
            style="@style/PagerTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/tvWikipedia"
            tools:text="@tools:sample/lorem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"/>

        <TextView
            android:text="@string/location"
            style="@style/PagerTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/tvLocation"
            tools:text="@tools:sample/lorem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/region"
            style="@style/PagerTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/tvRegion"
            tools:text="@tools:sample/lorem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <TextView
            android:text="@string/details"
            style="@style/PagerTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/tvDetails"
            tools:text="@tools:sample/lorem/random"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/map"
                style="@style/PagerTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <ImageView
                android:id="@+id/ivMap"
                android:layout_width="@dimen/_50dp"
                android:layout_height="@dimen/_50dp"
                android:src="@drawable/launch_pad"
                />


        </LinearLayout>








    </LinearLayout>

</ScrollView>