<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_10dp">

        <ImageView
            android:id="@+id/ivRocket"
            tools:src="@drawable/spacex"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_300dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/name"
                style="@style/PagerTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"/>

            <TextView
                android:text="@string/active"
                style="@style/PagerTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"/>

            <ImageView
                android:id="@+id/ivActive"
                tools:src="@drawable/thumb_down_icon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/ivShare"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/share" />

        </LinearLayout>



        <TextView
            android:id="@+id/tvName"
            tools:text="@tools:sample/lorem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/type"
            style="@style/PagerTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvType"
            tools:text="@tools:sample/lorem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/country"
            style="@style/PagerTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvCountry"
            tools:text="@tools:sample/lorem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/company"
            style="@style/PagerTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvCompany"
            tools:text="@tools:sample/lorem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/wikipedia"
            style="@style/PagerTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/tvWikipedia"
            tools:text="@tools:sample/lorem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"/>

        <TextView
            android:text="@string/description"
            style="@style/PagerTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvDescription"
            tools:text="@tools:sample/lorem/random"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>




</ScrollView>