<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:text="@string/name"
                style="@style/PagerTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"/>

            <ImageView
                android:id="@+id/ivShare"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/share" />




        </LinearLayout>

        <TextView
            android:id="@+id/tvName"
            tools:text="@tools:sample/lorem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>



        <TextView
            android:text="@string/wikipedia"
            style="@style/PagerTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvWikipedia"
            tools:text="@tools:sample/lorem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"/>
        <TextView
            android:text="@string/website"
            style="@style/PagerTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvWebsite"
            tools:text="@tools:sample/lorem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"/>
        <TextView
            android:text="@string/description"
            style="@style/PagerTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvDescription"
            tools:text="@tools:sample/lorem/random"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>