<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_10dp">

        <ImageView
            android:id="@+id/ivLaunch"
            tools:src="@drawable/spacex"
            android:layout_width="wrap_content"
            android:layout_height="500dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/date"
                style="@style/PagerTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"/>


            <ImageView
                android:id="@+id/ivShare"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/share" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvDate"
            tools:text="@tools:sample/date/ddmmyy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/title"
            style="@style/PagerTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>



        <TextView
            android:id="@+id/tvTitle"
            tools:text="@tools:sample/lorem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:text="@string/success"
                style="@style/PagerTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"/>

            <ImageView
                android:id="@+id/ivSuccess"
                tools:src="@drawable/thumb_down_icon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/tvDetailsLabel"
            android:text="@string/details"
            style="@style/PagerTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvDetails"
            tools:text="@tools:sample/lorem/random"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <WebView
            android:layout_width="match_parent"
            android:layout_height="250sp"
            android:id="@+id/wvYoutube"/>


    </LinearLayout>

</ScrollView>